# bloomers

./: .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
cmake/: dev-mode.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  variables.cmake
src/: bloom.cpp  bloom.hpp  main.cpp
test/: CMakeLists.txt
test/src/: bloom_test.cpp
